Adding Validate and Delete
